--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
     height: 2px;
     border-radius: 4px;
     position: absolute;
-    background: #fff;
+    /* background: #fff; */
     transition: all 250ms ease-out;
     will-change: transform;
   }
@@ -128,7 +128,6 @@
     display: block;
     width: 100%;
     height: 300px;
-    object-fit: cover;
   }
 
   @media (max-width: 768px) {
