--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,16 @@
 }
 
 @layer base {
+  /* input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  input[type='number'] {
+    -moz-appearance: textfield;
+  } */
+
   html,
   body {
     direction: rtl;
